RESOLVED FIXED119165
REGRESSION(r153380): Can't open messages on Gmail
https://bugs.webkit.org/show_bug.cgi?id=119165
Summary REGRESSION(r153380): Can't open messages on Gmail
Ryosuke Niwa
Reported 2013-07-26 14:49:55 PDT
Reproduction steps: 1. Login to Gmail 2. Click on any message. Expected result: The message is open on a pane Actual result: Nothing happens. I don't see any error messages in the console either. It appears as if click events are never fired?
Attachments
Disables final on clang 4.0 (2.94 KB, patch)
2013-07-26 18:06 PDT, Ryosuke Niwa
no flags
Fixed a typo (2.95 KB, patch)
2013-07-26 18:06 PDT, Ryosuke Niwa
no flags
Patch for landing (2.98 KB, patch)
2013-07-26 18:12 PDT, Ryosuke Niwa
no flags
Make the fix Apple specific since __clang_major__ and __clang_minor__ are vendor dependent (3.11 KB, patch)
2013-07-26 18:55 PDT, Ryosuke Niwa
no flags
Use ifdef instead of if defined (3.11 KB, patch)
2013-07-26 19:01 PDT, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2013-07-26 14:50:37 PDT
Filip Pizlo
Comment 2 2013-07-26 14:52:15 PDT
It worked fine when I was landing http://trac.webkit.org/changeset/153381; after all, to get the crash to repro you had to click on messages.
Ryosuke Niwa
Comment 3 2013-07-26 14:52:23 PDT
I guess the regression range is somewhat misleading since WebKit nightly used to crash prior to http://trac.webkit.org/changeset/153381
Radar WebKit Bug Importer
Comment 4 2013-07-26 14:52:30 PDT
Radar WebKit Bug Importer
Comment 5 2013-07-26 14:52:33 PDT
Ryosuke Niwa
Comment 6 2013-07-26 14:54:40 PDT
(In reply to comment #2) > It worked fine when I was landing http://trac.webkit.org/changeset/153381; after all, to get the crash to repro you had to click on messages. Do you remember the revision you were able to open a message?
Ryosuke Niwa
Comment 7 2013-07-26 15:35:14 PDT
This is probably caused by http://trac.webkit.org/changeset/153380.
Ryosuke Niwa
Comment 8 2013-07-26 16:30:58 PDT
I've confirmed that the regression is caused by http://trac.webkit.org/changeset/153380 by manually bisecting the issue.
Ryosuke Niwa
Comment 9 2013-07-26 16:31:37 PDT
kling points out that the issue doesn't reproduce on this local machine. We're suspecting it's yet another instance of an old version of clang not being able to compile FINAL correctly.
Ryosuke Niwa
Comment 10 2013-07-26 16:46:40 PDT
It appears that this bug reproduces whenever we compile WebKit with clang 4 but not when we compile it with clang 5.
Ryosuke Niwa
Comment 11 2013-07-26 18:06:09 PDT
Created attachment 207569 [details] Disables final on clang 4.0
Ryosuke Niwa
Comment 12 2013-07-26 18:06:56 PDT
Created attachment 207570 [details] Fixed a typo
Ryosuke Niwa
Comment 13 2013-07-26 18:08:51 PDT
Comment on attachment 207570 [details] Fixed a typo View in context: https://bugs.webkit.org/attachment.cgi?id=207570&action=review > Source/WTF/wtf/Compiler.h:44 > +#define GCC_VERSION_AT_LEAST(major, minor) (__clang_major__ >= major && __clang_major__ >= minor) Ugh... clearly this needs to be CLANG_VERSION_AT_LEAST instead. > Source/WTF/wtf/Compiler.h:65 > +#define WTF_COMPILER_SUPPORTS_CXX_FINAL_CONTROL WTF_COMPILER_SUPPORTS_CXX_OVERRIDE_CONTROL && GCC_VERSION_AT_LEAST(4, 2) Ditto here.
Ryosuke Niwa
Comment 14 2013-07-26 18:12:45 PDT
Created attachment 207571 [details] Patch for landing
Ryosuke Niwa
Comment 15 2013-07-26 18:13:24 PDT
Comment on attachment 207571 [details] Patch for landing I'm gonna wait for EWS bots to process this patch.
Andreas Kling
Comment 16 2013-07-26 18:41:51 PDT
Comment on attachment 207571 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=207571&action=review > Source/WTF/wtf/Compiler.h:44 > +#define CLANG_VERSION_AT_LEAST(major, minor) (defined(__clang_major__) && __clang_major__ >= major && __clang_major__ >= minor) Typo at the end, __clang_major__ >= minor Should be __clang_minor__ >= minor
Ryosuke Niwa
Comment 17 2013-07-26 18:55:34 PDT
Created attachment 207574 [details] Make the fix Apple specific since __clang_major__ and __clang_minor__ are vendor dependent
WebKit Commit Bot
Comment 18 2013-07-26 18:57:32 PDT
Attachment 207574 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Compiler.h']" exit_code: 1 Source/WTF/wtf/Compiler.h:63: One space before end of line comments [whitespace/comments] [5] Source/WTF/wtf/Compiler.h:63: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 19 2013-07-26 19:01:04 PDT
Created attachment 207575 [details] Use ifdef instead of if defined
WebKit Commit Bot
Comment 20 2013-07-26 19:02:26 PDT
Attachment 207575 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Compiler.h']" exit_code: 1 Source/WTF/wtf/Compiler.h:63: One space before end of line comments [whitespace/comments] [5] Source/WTF/wtf/Compiler.h:63: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 21 2013-07-27 14:37:31 PDT
Comment on attachment 207575 [details] Use ifdef instead of if defined Looks like a reasonable solution. I'll land this patch right away to get nightlies back in shape on ML.
Andreas Kling
Comment 22 2013-07-27 14:39:13 PDT
Comment on attachment 207575 [details] Use ifdef instead of if defined Clearing flags on attachment: 207575 Committed r153400: <http://trac.webkit.org/changeset/153400>
Andreas Kling
Comment 23 2013-07-27 14:39:21 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 24 2013-07-28 17:17:57 PDT
(In reply to comment #21) > (From update of attachment 207575 [details]) > Looks like a reasonable solution. I'll land this patch right away to get nightlies back in shape on ML. Thanks!
Alexey Proskuryakov
Comment 25 2013-07-29 10:30:08 PDT
*** Bug 119176 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 26 2013-07-29 10:31:06 PDT
*** Bug 119193 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 27 2013-07-29 10:31:43 PDT
*** Bug 119202 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.